--- a/projects/index.html
+++ b/projects/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <!-- fixed viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Hands-on projects">
+  <meta name="description" content="Publications">
   <meta name="author" content="Hemanth Sabbella">
   <meta property="og:image" content="img/hemanth_small.jpg" />
-  <title>Projects | Hemanth</title>
+  <title>Publications | Hemanth</title>
 
   <!-- styles -->
   <link href="/css/bootstrap.css" rel="stylesheet">
@@ -25,13 +25,11 @@
     /* hide mobile elements on desktop */
     #menu-btn, .mobile-menu { display: none; }
 
-    /* project-gallery styles unchanged… */
-
     @media only screen and (max-width: 768px) {
-      /* hide desktop pills */
+      /* hide desktop nav-pills */
       .nav.nav-pills.pull-right { display: none !important; }
 
-      /* show hamburger */
+      /* hamburger */
       #menu-btn {
         display: inline-block !important;
         font-size: 1.5em;
@@ -72,26 +70,24 @@
       }
       .mobile-menu a:hover { background: rgba(0,150,199,0.1); }
 
-      /* make galleries full‐width */
-      .projects .gallery {
-        width: 100% !important;
-        float: none;
-        margin: 0.5rem 0;
-      }
-      img { max-width: 100%; height: auto; }
+      /* tighten up lists for mobile */
+      .publications ol { margin-left: 1rem; }
     }
   </style>
 </head>
 
 <body>
   <div class="container">
+
     <div class="header">
       <!-- desktop nav -->
       <ul class="nav nav-pills pull-right">
         <li class="passive"><a href="/projects">Projects</a></li>
         <li><a href="/publications">Publications</a></li>
         <li class="passive">
-          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a>
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">
+            CV
+          </a>
         </li>
       </ul>
 
@@ -115,14 +111,26 @@
       </li>
     </ul>
 
-    <div class="projects">
-      <div class="gallery">
-        <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
-          <img src="/img/IMG_0244.jpeg" alt="PA2BLO">
-        </a>
-        <div class="desc">PA2BLO</div>
-      </div>
-      <!-- …rest of your galleries unchanged… -->
+    <div class="publications">
+      <p style="font-size: 21px; color: var(--ocean-primary);">Conferences &amp; Journals</p>
+      <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; padding:2px 4px; font-weight:bold;">
+              [IROS'24]
+            </span>
+            D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
+            <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
+              "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
+            </a>
+            <em>IEEE/RSJ IROS</em>, 2024.
+          </p>
+        </li>
+        <!-- …rest unchanged… -->
+      </ol>
+
+      <!-- Workshops, Posters, Patents unchanged… -->
     </div>
 
     <div class="footer">
@@ -131,6 +139,7 @@
         <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
     </div>
+
   </div>
 
   <script>
