--- a/publications/index.html
+++ b/publications/index.html
@@ -26,10 +26,8 @@
     #menu-btn, .mobile-menu { display: none; }
 
     @media only screen and (max-width: 768px) {
-      /* hide desktop nav-pills */
       .nav.nav-pills.pull-right { display: none !important; }
 
-      /* hamburger */
       #menu-btn {
         display: inline-block !important;
         font-size: 1.5em;
@@ -41,15 +39,10 @@
         margin-left: 0.5rem;
       }
 
-      /* center header + align icon */
       .header { text-align: center; }
-      .header-right {
-        display: inline-flex;
-        align-items: baseline;
-      }
+      .header-right { display: inline-flex; align-items: baseline; }
       .header-right h3 { margin: 0; display: inline; }
 
-      /* mobile menu */
       .mobile-menu {
         display: none;
         max-width: 300px;
@@ -70,28 +63,24 @@
       }
       .mobile-menu a:hover { background: rgba(0,150,199,0.1); }
 
-      /* tighten up lists for mobile */
-      .publications ol { margin-left: 1rem; }
+      /* even spacing for conference list */
+      .publications ol li { margin-bottom: 1rem; }
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-
     <div class="header">
-      <!-- desktop nav -->
       <ul class="nav nav-pills pull-right">
-        <li class="passive"><a href="/projects">Projects</a></li>
-        <li><a href="/publications">Publications</a></li>
+        <li class="passive"><a href="/projects" style="text-transform: none;">Projects</a></li>
+        <li><a href="/publications" style="text-transform: none;">Publications</a></li>
         <li class="passive">
-          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">
-            CV
-          </a>
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
+             style="text-transform: none;">CV</a>
         </li>
       </ul>
 
-      <!-- mobile header -->
       <div class="header-right">
         <h3 class="text-muted" style="text-transform: none;">
           <a href="/">Hemanth Sabbella</a>
@@ -100,14 +89,11 @@
       </div>
     </div>
 
-    <!-- mobile menu -->
     <ul class="mobile-menu" id="mobile-menu">
       <li><a href="/projects">Projects</a></li>
       <li><a href="/publications">Publications</a></li>
       <li>
-        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">
-          CV
-        </a>
+        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a>
       </li>
     </ul>
 
@@ -117,20 +103,129 @@
       <ol>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; padding:2px 4px; font-weight:bold;">
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 4px;">
               [IROS'24]
             </span>
             D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
             <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
               "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
             </a>
-            <em>IEEE/RSJ IROS</em>, 2024.
+            <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2024.
           </p>
         </li>
-        <!-- …rest unchanged… -->
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [PerCom'24]
+            </span>
+            <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
+            <a href="https://ieeexplore.ieee.org/abstract/document/10494427" target="_blank">
+              "PA2BLO: Low-Power, Personalized Audio Badge",
+            </a>
+            <em>IEEE International Conference on Pervasive Computing and Communications (PerCom)</em>, 2024.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [MMSys'23]
+            </span>
+            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <a href="https://dl.acm.org/doi/10.1145/3587819.3590986" target="_blank">
+              "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams",
+            </a>
+            <em>ACM Multimedia Systems (MMSys)</em>, 2023.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [ISCAS'22]
+            </span>
+            <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
+            <a href="https://ieeexplore.ieee.org/document/9937827" target="_blank">
+              "An Always-On tinyML Acoustic Classifier for Ecological Applications",
+            </a>
+            <em>IEEE International Symposium on Circuits and Systems (ISCAS)</em>, 2022.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [Sensors'22]
+            </span>
+            S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
+            <a href="https://ieeexplore.ieee.org/document/9854404" target="_blank">
+              "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles",
+            </a>
+            <em>IEEE Sensors Journal</em>, 2022.
+          </p>
+        </li>
       </ol>
 
-      <!-- Workshops, Posters, Patents unchanged… -->
+      <hr>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Workshops</p>
+      <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [CoMoRea, PerCom'25]
+            </span>
+            <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
+            <a href="#" target="_blank">
+              "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
+            </a>
+            <em>PerCom Workshops</em>, 2025.
+          </p>
+        </li>
+      </ol>
+
+      <hr>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Demos &amp; Posters</p>
+      <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [COMSNETS'24]
+            </span>
+            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <a href="#" target="_blank">
+              "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
+            </a>
+            <em>COMSNETS</em>, 2024.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [tinyML Forum'21]
+            </span>
+            <u>Hemanth Reddy Sabbella</u>,
+            <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg" target="_blank">
+              "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights",
+            </a>
+            <em>tinyML Asia Technical Forum</em>, 2021.
+          </p>
+        </li>
+      </ol>
+
+      <hr>
+      <p style="font-size: 21px; color: var(--ocean-primary);">Patents</p>
+      <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [Granted]
+            </span>
+            S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
+            "Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing Agent",
+            <em>Indian Patent No. 528,512</em>.
+          </p>
+        </li>
+      </ol>
     </div>
 
     <div class="footer">
@@ -139,7 +234,6 @@
         <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
     </div>
-
   </div>
 
   <script>
