--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
     a { color: var(--ocean-primary); text-decoration: none; }
     a:hover, a:focus { color: var(--ocean-hover); text-decoration: underline; }
 
-    /* gallery hover effect and layout unchanged */
+    /* Desktop gallery layout unchanged */
     div.gallery {
       margin: 7px;
       margin-left: 30px;
@@ -58,14 +58,19 @@
       color: var(--ocean-primary);
     }
 
-    /* mobile menu elements hidden on desktop */
-    #menu-btn, .mobile-menu { display: none; }
+    /* hide mobile menu on desktop */
+    #menu-btn,
+    .mobile-menu {
+      display: none;
+    }
 
     @media only screen and (max-width: 768px) {
-      /* hide desktop nav pills */
-      .nav.nav-pills.pull-right { display: none !important; }
+      /* hide desktop nav */
+      .nav.nav-pills.pull-right {
+        display: none !important;
+      }
 
-      /* hamburger button */
+      /* hamburger */
       #menu-btn {
         display: inline-block !important;
         font-size: 1.5em;
@@ -77,12 +82,18 @@
         margin-left: 0.5rem;
       }
 
-      /* center header + align */
+      /* center header */
       .header { text-align: center; }
-      .header-right { display: inline-flex; align-items: baseline; }
-      .header-right h3 { margin: 0; display: inline; }
+      .header-right {
+        display: inline-flex;
+        align-items: baseline;
+      }
+      .header-right h3 {
+        margin: 0;
+        display: inline;
+      }
 
-      /* slide-down menu card */
+      /* slide-down menu */
       .mobile-menu {
         display: none;
         max-width: 300px;
@@ -94,27 +105,33 @@
         list-style: none;
         padding: 0;
       }
-      .mobile-menu li + li { border-top: 1px solid #eee; }
+      .mobile-menu li + li {
+        border-top: 1px solid #eee;
+      }
       .mobile-menu a {
         display: block;
         padding: 1rem 1.25rem;
         font-size: 1.25rem;
         color: var(--ocean-primary);
       }
-      .mobile-menu a:hover { background: rgba(0,150,199,0.1); }
+      .mobile-menu a:hover {
+        background: rgba(0,150,199,0.1);
+      }
 
-      /* shrink and center galleries */
+      /* stack & space out galleries */
       .projects .gallery {
         width: auto !important;
         float: none !important;
-        margin: 1rem auto !important;
+        margin: 2rem auto !important;  /* plenty of vertical space */
       }
       .projects .gallery img {
         width: 80%;
         display: block;
         margin: 0 auto;
       }
-      .projects .desc { text-align: center; }
+      .projects .desc {
+        text-align: center;
+      }
     }
   </style>
 </head>
@@ -123,8 +140,12 @@
   <div class="container">
     <div class="header">
       <ul class="nav nav-pills pull-right">
-        <li class="passive"><a href="/projects" style="text-transform: none;">Projects</a></li>
-        <li><a href="/publications" style="text-transform: none;">Publications</a></li>
+        <li class="passive">
+          <a href="/projects" style="text-transform: none;">Projects</a>
+        </li>
+        <li>
+          <a href="/publications" style="text-transform: none;">Publications</a>
+        </li>
         <li class="passive">
           <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
              style="text-transform: none;">CV</a>
@@ -138,11 +159,14 @@
       </div>
     </div>
 
+    <!-- mobile menu -->
     <ul class="mobile-menu" id="mobile-menu">
       <li><a href="/projects">Projects</a></li>
       <li><a href="/publications">Publications</a></li>
       <li>
-        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a>
+        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">
+          CV
+        </a>
       </li>
     </ul>
 
@@ -153,54 +177,63 @@
         </a>
         <div class="desc">PA2BLO</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="http://u-Bat.github.io/">
           <img src="/img/logo_ubat.png" alt="u-Bat">
         </a>
         <div class="desc">u-Bat</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
           <img src="/img/pointSpectra.jpg" alt="pointSpectra">
         </a>
         <div class="desc">pointSpectra</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
           <img src="/img/UDR_ADC.PNG" alt="UDR-ADC prototype">
         </a>
         <div class="desc">UDR-ADC prototype</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
           <img src="/img/Dhvani.jpeg" alt="Dhvani">
         </a>
         <div class="desc">Dhvani</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">
           <img src="/img/MSD_project.png" alt="Gamma Brain Wave Filter">
         </a>
         <div class="desc">Gamma Brain Wave Filter</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
           <img src="/img/Soc_project.png" alt="SoC Security">
         </a>
         <div class="desc">SoC Security: A logic level methodology to prevent differential power analysis</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
-          <img src="/img/Red_ball.png" alt="Red Ball Detection">
+          <img src="/img/Red_ball.png" alt="Red Ball Detection on Quadcopter">
         </a>
         <div class="desc">Red Ball Detection on Quadcopter</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">
           <img src="/img/EMI.png" alt="EMI Sensing Board">
         </a>
         <div class="desc">EMI Sensing Board</div>
       </div>
+
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
           <img src="/img/IIITDuino.PNG" alt="IIITDuino">
@@ -211,16 +244,17 @@
 
     <div class="footer">
       <div class="row">
-        <div class="col-sm-8"><p><small></small></p></div>
+        <div class="col-sm-8"><small></small></div>
         <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
     </div>
   </div>
 
   <script>
+    // toggle mobile menu
     document.getElementById('menu-btn').addEventListener('click', function() {
-      var m = document.getElementById('mobile-menu');
-      m.style.display = m.style.display === 'block' ? 'none' : 'block';
+      var menu = document.getElementById('mobile-menu');
+      menu.style.display = (menu.style.display === 'block' ? 'none' : 'block');
     });
   </script>
   <script src="https://code.jquery.com/jquery.js"></script>
