--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,11 @@
   <link href="/css/style.css" rel="stylesheet">
 
   <style>
+    /* remove that unwanted header line on desktop */
+    .header {
+      border-bottom: none !important;
+    }
+
     :root {
       --ocean-primary: #0096C7;
       --ocean-hover:   #006494;
@@ -170,70 +175,61 @@
     <div class="projects">
       <div class="gallery">
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
-          <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="500">
+          <img src="/img/IMG_0244.jpeg" alt="PA2BLO">
         </a>
         <div class="desc">PA2BLO</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="http://u-Bat.github.io/">
-          <img src="/img/logo_ubat.png" alt="Cinque Terre" width="600" height="450">
+          <img src="/img/logo_ubat.png" alt="u-Bat">
         </a>
         <div class="desc">u-Bat</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
-          <img src="/img/pointSpectra.jpg" alt="Mountains" width="600" height="400">
+          <img src="/img/pointSpectra.jpg" alt="pointSpectra">
         </a>
         <div class="desc">pointSpectra</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
-          <img src="/img/UDR_ADC.PNG" alt="Northern Lights" width="600" height="400">
+          <img src="/img/UDR_ADC.PNG" alt="UDR-ADC prototype">
         </a>
         <div class="desc">UDR-ADC prototype</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
-          <img src="/img/Dhvani.jpeg" alt="Forest" width="600" height="400">
+          <img src="/img/Dhvani.jpeg" alt="Dhvani">
         </a>
         <div class="desc">Dhvani</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">
-          <img src="/img/MSD_project.png" alt="Cinque Terre" width="600" height="400">
+          <img src="/img/MSD_project.png" alt="Gamma Brain Wave Filter">
         </a>
         <div class="desc">Gamma Brain Wave Filter</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
-          <img src="/img/Soc_project.png" alt="Forest" width="600" height="400">
+          <img src="/img/Soc_project.png" alt="SoC Security">
         </a>
         <div class="desc">SoC Security: A logic level methodology to prevent differential power analysis</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
-          <img src="/img/Red_ball.png" alt="Mountains" width="600" height="400">
+          <img src="/img/Red_ball.png" alt="Red Ball Detection on Quadcopter">
         </a>
         <div class="desc">Red Ball Detection on Quadcopter</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">
-          <img src="/img/EMI.png" alt="Mountains" width="600" height="400">
+          <img src="/img/EMI.png" alt="EMI Sensing Board">
         </a>
         <div class="desc">EMI Sensing Board</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
-          <img src="/img/IIITDuino.PNG" alt="Mountains" width="600" height="400">
+          <img src="/img/IIITDuino.PNG" alt="IIITDuino">
         </a>
         <div class="desc">IIITDuino</div>
       </div>
