--- a/projects/index.html
+++ b/projects/index.html
@@ -224,7 +224,7 @@
           <img src="/img/Soc_project.png" alt="SoC Security">
         </a>
         <div class="desc">
-          SoC Security: A logic level methodology to prevent differential power analysis
+          Logic Level SoC Power Security
         </div>
       </div>
 
